--- a/ex02/.classpath
+++ b/ex02/.classpath
@@ -44,6 +44,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/gunho/Downloads/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="/Users/gunho/Downloads/lombok.jar"/>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
 			<attribute name="optional" value="true"/>
