--- a/ex02/pom.xml
+++ b/ex02/pom.xml
@@ -164,6 +164,17 @@
 			<version>1.16</version>
 		</dependency>
 		
+		<!-- <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.5</version>
+		</dependency> -->
 		
 	</dependencies>
     <build>
